--- a/index.html
+++ b/index.html
@@ -45,9 +45,17 @@
     <li><a href="/hax.html">HAX, card demo</a></li>
   </ul>
   <div class="wrapper">
+
+
     <learning-card class="one"></learning-card>
     <learning-card class="two"></learning-card>
     <learning-card type="science"></learning-card>
+
+
+    <slime-icon type="math"></slime-icon>
+
+
+
   </div>
   <script type="module">
     import "./src/app.js";
